--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -7,7 +7,7 @@
     <title>Timer</title>
   </head>
   <body>
-    <a href="./index.html">Go to home</a> <br><br>
+    <a href="./index.html">Go home</a> <br><br>
 
     <input type="text" id="datetime-picker" />
     <button type="button" data-start>Start</button>
@@ -30,6 +30,22 @@
         <span class="label">Seconds</span>
       </div>
     </div>
+
+    <style>
+      .timer{
+        display: flex;
+        gap: 8px;
+      }
+
+      .field{
+        display:flex;
+        flex-direction: column;
+      }
+
+      .value{
+        font-size: 20px;
+      }
+    </style>
 
     <script src="./js/1-timer.js" type="module"></script>
   </body>
