--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -7,9 +7,8 @@
     <title>Page 3</title>
   </head>
   <body>
-    <section>
-      <a href="./index.html">Go to home</a>
-      <h1>Welcome to page 3</h1>
-    </section>
+    <a href="./index.html">Go home</a> <br><br>
+
+    
   </body>
 </html>
