--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -9,6 +9,33 @@
   <body>
     <a href="./index.html">Go home</a> <br><br>
 
+    <form class="form">
+      <label>
+        Delay (ms)
+        <input type="number" name="delay" required />
+      </label>
     
+      <fieldset>
+        <legend>State</legend>
+        <label>
+          <input type="radio" name="state" value="fulfilled" required />
+          Fulfilled
+        </label>
+        <label>
+          <input type="radio" name="state" value="rejected" required />
+          Rejected
+        </label>
+      </fieldset>
+    
+      <button type="submit">Create notification</button>
+    </form>
+
+    <style>
+      fieldset{
+        display: block;
+        max-width: 200px;
+      }
+    </style>
+    <script type="module" src="./js/2-snackbar.js"></script>
   </body>
 </html>
